[package]
name = "my-ff"
version = "0.1.0"
authors = ["wangb <wangbinyq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.7"
lazy_static = "1.4.0"
atty = "0.2.14"
ansi_term = "0.12.1"
ignore = "0.4.14"
num_cpus = "1.13.0"
